include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gnome-packagekit
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES = \
	figures/gpk-application-groups.png \
	figures/gpk-client-copy-local.png \
	figures/gpk-eula.png \
	figures/gpk-prefs.png \
	figures/gpk-repo-auth.png \
	figures/gpk-log.png \
	figures/gpk-repo.png \
	figures/gpk-signature.png \
	figures/gpk-updates-overview.png \
	figures/gpk-client-codecs.png \
	figures/gpk-added-deps.png \
	figures/gpk-remove-confirm.png \
	figures/gpk-updates.png \
	figures/gpk-service-pack.png \
	figures/gpk-service-pack-example.png \
	figures/gpk-updates-warning.png

DOC_LINGUAS = de el es fr oc pl sv zh_CN

