@YELP_HELP_RULES@

HELP_ID = gnome-packagekit
HELP_FILES = legal.xml index.docbook
HELP_MEDIA = \
	figures/gpk-application-groups.png \
	figures/gpk-client-copy-local.png \
	figures/gpk-eula.png \
	figures/gpk-prefs.png \
	figures/gpk-repo-auth.png \
	figures/gpk-log.png \
	figures/gpk-repo.png \
	figures/gpk-signature.png \
	figures/gpk-updates-overview.png \
	figures/gpk-client-codecs.png \
	figures/gpk-added-deps.png \
	figures/gpk-remove-confirm.png \
	figures/gpk-updates.png \
	figures/gpk-service-pack.png \
	figures/gpk-service-pack-example.png \
	figures/gpk-updates-warning.png

HELP_LINGUAS = de el es fr gl oc pa pl pt_BR ru sl sv zh_CN

