themedir = $(pkgdatadir)/icons/hicolor
size = 16x16
context = animations

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = 				\
	pk-action-cleanup.png		\
	pk-action-removing.png		\
	pk-action-testing.png		\
	pk-action-download.png		\
	pk-action-refresh-cache.png	\
	pk-action-searching.png		\
	pk-action-installing.png	\
	pk-action-waiting.png

noinst_DATA =

EXTRA_DIST =				\
	$(icons_DATA)			\
	$(noinst_DATA)
