themedir = $(pkgdatadir)/icons/hicolor
size = 22x22
context = status

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = 				\
	pk-package-installed.png	\
	pk-package-available.png	\
	pk-package-add.png		\
	pk-package-cleanup.png		\
	pk-package-delete.png		\
	pk-package-download.png		\
	pk-package-search.png		\
	pk-package-update.png		\
	pk-package-info.png		\
	pk-update-bugfix.png		\
	pk-update-enhancement.png	\
	pk-update-high.png		\
	pk-update-low.png		\
	pk-update-normal.png		\
	pk-update-security.png		\
	pk-refresh-cache.png		\
	pk-rollback.png			\
	pk-setup.png			\
	pk-wait.png

noinst_DATA = 

EXTRA_DIST =				\
	$(icons_DATA)


