themedir = $(pkgdatadir)/icons/hicolor
size = 24x24
context = status

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = 				\
	pk-package-add.png		\
	pk-package-cleanup.png		\
	pk-package-delete.png		\
	pk-package-download.png		\
	pk-package-search.png		\
	pk-package-update.png

noinst_DATA = 

EXTRA_DIST =				\
	$(icons_DATA)


